--- a/cn.zh-CN/镜像/公共镜像/公共镜像发布记录.md
+++ b/cn.zh-CN/镜像/公共镜像/公共镜像发布记录.md
@@ -10,6 +10,7 @@ keyword: [release note, 发布更新, ecs, linux, windows]
 
 -   如无特殊声明，更新内容适用于云服务器ECS所有可用地域。
 -   公共镜像适用于大多数实例规格族，但存在一部分实例规格族不适用。这些实例规格族只能选用指定的公共镜像，详情请参见：
+    -   [UEFI镜像](#section_5m3_jo1_1sl)
     -   [可信镜像](#section_ta4_ich_flj)
     -   [AMD镜像](#section_in3_bba_8af)
 
@@ -26,6 +27,12 @@ keyword: [release note, 发布更新, ecs, linux, windows]
 
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
+|CentOS 8.4|centos\_8\_4\_x64\_20G\_alibase\_20210623.vhd|2021-06-23|-   内核版本：4.18.0-305.3.1.el8.x86\_64
+-   更新内容：更新最新补丁包
+-   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
+|CentOS 7.9|centos\_7\_9\_x64\_20G\_alibase\_20210623.vhd|2021-06-23|-   内核版本：3.10.0-1160.31.1.el7.x86\_64
+-   更新内容：更新最新补丁包
+-   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
 |CentOS 8.3|centos\_8\_3\_x64\_20G\_alibase\_20210521.vhd|2021-05-21|-   内核版本：4.18.0-240.22.1.el8\_3.x86\_64
 -   更新内容：更新最新补丁包 |
 |CentOS 7.9|centos\_7\_9\_x64\_20G\_alibase\_20210521.vhd|2021-05-21|-   内核版本：3.10.0-1160.25.1.el7.x86\_64
@@ -153,6 +160,12 @@ keyword: [release note, 发布更新, ecs, linux, windows]
 
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
+|Debian 10.10|debian\_10\_10\_x64\_20G\_alibase\_20210623.vhd|2021-06-23|-   内核版本：4.19.0-17-amd64
+-   更新内容：更新最新补丁包
+-   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
+|Debian 9.13|debian\_9\_13\_x64\_20G\_alibase\_20210623.vhd|2021-06-23|-   内核版本：4.9.0-16-amd64
+-   更新内容：更新最新补丁包
+-   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
 |Debian 10.9|debian\_10\_9\_x64\_20G\_alibase\_20210521.vhd|2021-05-21|-   内核版本：4.19.0-16-amd64
 -   更新内容：更新最新补丁包 |
 |Debian 9.13|debian\_9\_13\_x64\_20G\_alibase\_20210521.vhd|2021-05-21|-   内核版本：4.9.0-15-amd64
@@ -274,6 +287,15 @@ keyword: [release note, 发布更新, ecs, linux, windows]
 
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
+|Ubuntu20.04|ubuntu\_20\_04\_x64\_20G\_alibase\_20210623.vhd|2021-06-23|-   内核版本：5.4.0-77-generic
+-   更新内容：更新最新补丁包
+-   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
+|Ubuntu18.04|ubuntu\_18\_04\_x64\_20G\_alibase\_20210623.vhd|2021-06-23|-   内核版本：4.15.0-147-generic
+-   更新内容：更新最新补丁包
+-   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
+|Ubuntu16.04|ubuntu\_16\_04\_x64\_20G\_alibase\_20210623.vhd|2021-06-23|-   内核版本：4.4.0-210-generic
+-   更新内容：更新最新补丁包
+-   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
 |Ubuntu20.04|ubuntu\_20\_04\_x64\_20G\_alibase\_20210521.vhd|2021-05-21|-   内核版本：5.4.0-74-generic
 -   更新内容：更新最新补丁包 |
 |Ubuntu18.04|ubuntu\_18\_04\_x64\_20G\_alibase\_20210521.vhd|2021-05-21|-   内核版本：4.15.0-144-generic
@@ -407,6 +429,9 @@ keyword: [release note, 发布更新, ecs, linux, windows]
 
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
+|Opensuse 15.2|opensuse\_15\_2\_x64\_20G\_alibase\_20210623.vhd|2021-06-23|-   内核版本：5.3.18-lp152.78-default
+-   更新最新补丁包
+-   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
 |Opensuse 15.2|opensuse\_15\_2\_x64\_20G\_alibase\_20210521.vhd|2021-05-21|-   内核版本：5.3.18-lp152.75-default
 -   更新最新补丁包 |
 |Opensuse 15.2|opensuse\_15\_2\_x64\_20G\_alibase\_20210420.vhd|2021-04-20|-   内核版本：5.3.18-lp152.69-default
@@ -481,6 +506,12 @@ keyword: [release note, 发布更新, ecs, linux, windows]
 
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
+|Fedora CoreOS 34.20210529.3.0\_3|fcos\_34.20210529.3.0\_3\_x64\_20G\_alibase\_20210623.vhd|2021-06-23|-   内核版本：5.12.7-300.fc34.x86\_64
+-   更新最新补丁包
+-   使用该镜像时，您需要注意：
+    -   创建实例或更换系统盘时，登录凭证仅支持设置密钥对，且仅能使用实例第一次设置的密钥对登录实例，不支持更换或解绑该密钥对。
+    -   创建实例或更换系统盘后，不支持为实例重置密码。
+-   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
 |Fedora CoreOS 33.20210217.3.0\_3|fcos\_33.20210217.3.0\_3\_x86\_20G\_alibase\_20210331.vhd|2021-03-31|-   发布Fedora CoreOS公共镜像
 -   内核版本：5.10.12-200.fc33.x86\_64
 -   使用该镜像时，您需要注意：
@@ -491,6 +522,9 @@ keyword: [release note, 发布更新, ecs, linux, windows]
 
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
+|Fedora 34 64位|fedora\_34\_1\_x64\_20G\_alibase\_20210623.vhd|2021-06-23|-   内核版本：5.12.12-300.fc34.x86\_64
+-   更新最新补丁包
+-   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
 |Fedora 33 64位|fedora\_33\_0\_x64\_20G\_alibase\_20210318.vhd|2021-03-18|-   内核版本：5.11.7-200.fc33.x86\_64
 -   更新内容：
     -   更新最新补丁包
@@ -507,12 +541,16 @@ UEFI镜像仅适用的实例规格族：ecs.g7、ecs.r7、ecs.c7、ecs.g7t、ecs
 
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
+|Debian 10.10|debian\_10\_10\_uefi\_x64\_20G\_alibase\_20210611.vhd|2021-06-11|-   发布Debian 10.10 UEFI版镜像
+-   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
+|Debian 9.13|debian\_9\_13\_uefi\_x64\_20G\_alibase\_20210611.vhd|2021-06-11|-   发布Debian 9.13 UEFI版镜像
+-   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
+|CentOS 7.9|centos\_7\_9\_uefi\_x64\_20G\_alibase\_20210611.vhd|2021-06-11|-   发布CentOS 7.9 UEFI版镜像
+-   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
 |CentOS 8.4|centos\_8\_4\_uefi\_x64\_20G\_alibase\_20210611.vhd|2021-06-11|发布CentOS 8.4 UEFI版镜像|
 |CentOS 8.3|centos\_8\_3\_uefi\_x64\_20G\_alibase\_20210611.vhd|2021-06-11|发布CentOS 8.3 UEFI版镜像|
-|Ubuntu 20.04|ubuntu\_20\_04\_uefi\_x64\_20G\_alibase\_20210609.vhd|2021-06-09|-   发布Ubuntu 20.04 UEFI版镜像
--   适用地域：华北2（北京）、华东1（杭州）、华东2（上海）、西南1（成都）、中国（香港）、新加坡 |
-|Ubuntu 18.04|ubuntu\_18\_04\_uefi\_x64\_20G\_alibase\_20210609.vhd|2021-06-09|-   发布Ubuntu 18.04 UEFI版镜像
--   适用地域：华北2（北京）、华东1（杭州）、华东2（上海）、西南1（成都）、中国（香港）、新加坡 |
+|Ubuntu 20.04|ubuntu\_20\_04\_uefi\_x64\_20G\_alibase\_20210609.vhd|2021-06-09|发布Ubuntu 20.04 UEFI版镜像|
+|Ubuntu 18.04|ubuntu\_18\_04\_uefi\_x64\_20G\_alibase\_20210609.vhd|2021-06-09|发布Ubuntu 18.04 UEFI版镜像|
 
 ## 可信镜像
 
@@ -552,6 +590,11 @@ AMD镜像仅适用的实例规格族：ecs.ebmg6a、ecs.ebmc6a、ecs.ebmr6a。
 
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
+|Windows Server 2012 R2 数据中心版|-   中文版：win2012r2\_9600\_x64\_dtc\_zh-cn\_40G\_alibase\_20210618.vhd
+-   英文版：win2012r2\_9600\_x64\_dtc\_en-us\_40G\_alibase\_20210618.vhd
+
+|2021-06-18|-   更新2021年06月份系统补丁：KB5003671、KB5003545
+-   修复CVE-2021-26414、CVE-2021-33742、CVE-2021-31962、CVE-2021-31199/31201、CVE-2021-31956、CVE-2021-31959等漏洞 |
 |Windows Server 2012 R2 数据中心版|-   中文版：win2012r2\_9600\_x64\_dtc\_zh-cn\_40G\_alibase\_20210516.vhd
 -   英文版：win2012r2\_9600\_x64\_dtc\_en-us\_40G\_alibase\_20210516.vhd
 
@@ -674,6 +717,11 @@ AMD镜像仅适用的实例规格族：ecs.ebmg6a、ecs.ebmc6a、ecs.ebmr6a。
 
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
+|Windows Server 2016 数据中心版|-   中文版：win2016\_1607\_x64\_dtc\_zh-cn\_40G\_alibase\_20210618.vhd
+-   英文版：win2016\_1607\_x64\_dtc\_en-us\_40G\_alibase\_20210618.vhd
+
+|2021-06-18|-   更新2021年06月份系统补丁：KB5003638、KB5003542
+-   修复CVE-2021-26414、CVE-2021-33742、CVE-2021-31962、CVE-2021-31199/31201、CVE-2021-31956、CVE-2021-31959等漏洞 |
 |Windows Server 2016 数据中心版|-   中文版：win2016\_1607\_x64\_dtc\_zh-cn\_40G\_alibase\_20210516.vhd
 -   英文版：win2016\_1607\_x64\_dtc\_en-us\_40G\_alibase\_20210516.vhd
 
@@ -796,6 +844,16 @@ AMD镜像仅适用的实例规格族：ecs.ebmg6a、ecs.ebmc6a、ecs.ebmr6a。
 
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
+|Windows Server 2019 with Container 数据中心版|-   中文版：win2019\_1809\_x64\_dtc\_zh-cn\_40G\_container\_alibase\_20210618.vhd
+-   英文版：win2019\_1809\_x64\_dtc\_en-us\_40G\_container\_alibase\_20210618.vhd
+
+|2021-06-18|-   更新2021年06月份系统补丁：KB5003646、KB5003711
+-   修复CVE-2021-26414、CVE-2021-33742、CVE-2021-31962、CVE-2021-31199/31201、CVE-2021-31956、CVE-2021-31955、CVE-2021-31959等漏洞 |
+|Windows Server 2019 数据中心版|-   中文版：win2019\_1809\_x64\_dtc\_zh-cn\_40G\_alibase\_20210618.vhd
+-   英文版：win2019\_1809\_x64\_dtc\_en-us\_40G\_alibase\_20210618.vhd
+
+|2021-06-18|-   更新2021年06月份系统补丁：KB5003646、KB5003711
+-   修复CVE-2021-26414、CVE-2021-33742、CVE-2021-31962、CVE-2021-31199/31201、CVE-2021-31956、CVE-2021-31955、CVE-2021-31959等漏洞 |
 |Windows Server 2019 with Container 数据中心版|-   中文版：win2019\_1809\_x64\_dtc\_zh-cn\_40G\_container\_alibase\_20210516.vhd
 -   英文版：win2019\_1809\_x64\_dtc\_en-us\_40G\_container\_alibase\_20210516.vhd
 
@@ -964,7 +1022,7 @@ AMD镜像仅适用的实例规格族：ecs.ebmg6a、ecs.ebmc6a、ecs.ebmr6a。
 
 |2020-01-16|-   更新2020年1月份系统补丁
 -   修复CVE-2020-0609、CVE-2020-0601、CVE-2020-0625、CVE-2020-0611、CVE-2020-0640漏洞 |
-|Windows Server 2019 数据中心版|-   中文版：win2019\_1809\_x624\_dtc\_zh-cn\_40G\_alibase\_20191220.vhd
+|Windows Server 2019 数据中心版|-   中文版：win2019\_1809\_x64\_dtc\_zh-cn\_40G\_alibase\_20191220.vhd
 -   英文版：win2019\_1809\_x64\_dtc\_en-us\_40G\_alibase\_20191220.vhd
 
 |2019-12-20|更新2019年12月份安全补丁|
@@ -1097,6 +1155,16 @@ AMD镜像仅适用的实例规格族：ecs.ebmg6a、ecs.ebmc6a、ecs.ebmr6a。
 
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
+|Windows Server Version 2004 with Container 数据中心版|-   中文版：wincore\_2004\_x64\_dtc\_zh-cn\_40G\_container\_alibase\_20210618.vhd
+-   英文版：wincore\_2004\_x64\_dtc\_en-us\_40G\_container\_alibase\_20210618.vhd
+
+|2021-06-18|-   更新2021年06月份系统补丁：KB5003637、KB5003254
+-   修复CVE-2021-26414、CVE-2021-33742、CVE-2021-31962、CVE-2021-31199/31201、CVE-2021-31956、CVE-2021-33739、CVE-2021-31955、CVE-2021-31959等漏洞 |
+|Windows Server Version 2004 数据中心版|-   中文版：wincore\_2004\_x64\_dtc\_zh-cn\_40G\_alibase\_20210618.vhd
+-   英文版：wincore\_2004\_x64\_dtc\_en-us\_40G\_alibase\_20210618.vhd
+
+|2021-06-18|-   更新2021年06月份系统补丁：KB5003637、KB5003254
+-   修复CVE-2021-26414、CVE-2021-33742、CVE-2021-31962、CVE-2021-31199/31201、CVE-2021-31956、CVE-2021-33739、CVE-2021-31955、CVE-2021-31959等漏洞 |
 |Windows Server Version 2004 with Container 数据中心版|-   中文版：wincore\_2004\_x64\_dtc\_zh-cn\_40G\_container\_alibase\_20210516.vhd
 -   英文版：wincore\_2004\_x64\_dtc\_en-us\_40G\_container\_alibase\_20210516.vhd
 
