--- a/intl.zh-CN/实例/连接实例/连接方式概述.md
+++ b/intl.zh-CN/实例/连接实例/连接方式概述.md
@@ -12,41 +12,41 @@ keyword: [远程连接, VNC, Workbench]
 |------|--------|----|
 |Linux|Windows|-   VNC
 
-具体操作请参见[通过VNC远程连接登录Linux实例](/intl.zh-CN/实例/连接实例/连接Linux实例/通过VNC远程连接登录Linux实例.md)。
+具体操作，请参见[通过密码认证登录Linux实例](/intl.zh-CN/实例/连接实例/使用VNC连接实例/通过密码认证登录Linux实例.md)。
 
 -   PuTTY等客户端工具
-    -   登录凭证为SSH密钥对，请参见[在Windows环境中使用密钥对](/intl.zh-CN/实例/连接实例/连接Linux实例/使用SSH密钥对连接Linux实例.md)。
-    -   登录凭证为用户名密码，请参见[在Windows环境中使用用户名密码验证](/intl.zh-CN/实例/连接实例/连接Linux实例/使用用户名密码验证连接Linux实例.md)。 |
+    -   登录凭证为SSH密钥对，请参见[在Windows环境中使用密钥对](/intl.zh-CN/实例/连接实例/使用第三方客户端工具连接实例/使用SSH密钥对连接Linux实例.md)。
+    -   登录凭证为用户名密码，请参见[在Windows环境中使用用户名密码验证](/intl.zh-CN/实例/连接实例/使用第三方客户端工具连接实例/使用用户名密码验证连接Linux实例.md)。 |
 |Linux、MacOS等类Unix系统|-   VNC
 
-具体操作请参见[通过VNC远程连接登录Linux实例](/intl.zh-CN/实例/连接实例/连接Linux实例/通过VNC远程连接登录Linux实例.md)。
+具体操作，请参见[通过密码认证登录Linux实例](/intl.zh-CN/实例/连接实例/使用VNC连接实例/通过密码认证登录Linux实例.md)。
 
 -   SSH命令连接
-    -   登录凭证为SSH密钥对，请参见[在支持SSH命令的环境中使用密钥对（通过命令配置信息）](/intl.zh-CN/实例/连接实例/连接Linux实例/使用SSH密钥对连接Linux实例.md)。
-    -   登录凭证为用户名密码，请参见[在Linux或Mac OS X环境中使用用户名密码验证](/intl.zh-CN/实例/连接实例/连接Linux实例/使用用户名密码验证连接Linux实例.md)。 |
-|iOS、Android等移动设备操作系统|SSH Control Lite、JuiceSSH等App 具体操作请参见[在移动设备上连接Linux实例](/intl.zh-CN/实例/连接实例/连接Linux实例/在移动设备上连接Linux实例.md)。 |
+    -   登录凭证为SSH密钥对，请参见[在支持SSH命令的环境中使用密钥对（通过命令配置信息）](/intl.zh-CN/实例/连接实例/使用第三方客户端工具连接实例/使用SSH密钥对连接Linux实例.md)。
+    -   登录凭证为用户名密码，请参见[在Linux或Mac OS X环境中使用用户名密码验证](/intl.zh-CN/实例/连接实例/使用第三方客户端工具连接实例/使用用户名密码验证连接Linux实例.md)。 |
+|iOS、Android等移动设备操作系统|SSH Control Lite、JuiceSSH等App 具体操作，请参见[在移动设备上连接Linux实例](/intl.zh-CN/实例/连接实例/使用第三方客户端工具连接实例/在移动设备上连接Linux实例.md)。 |
 |Windows|Windows|-   VNC
 
-具体操作请参见[通过VNC远程连接Windows实例](/intl.zh-CN/实例/连接实例/连接Windows实例/通过VNC远程连接Windows实例.md)。
+具体操作，请参见[通过密码认证登录Windows实例](/intl.zh-CN/实例/连接实例/使用VNC连接实例/通过密码认证登录Windows实例.md)。
 
 -   远程桌面连接（MSTSC）等客户端工具
 
-具体操作请参见[本地设备使用Windows操作系统](/intl.zh-CN/实例/连接实例/连接Windows实例/在本地客户端上连接Windows实例.md)。 |
+具体操作，请参见[本地设备使用Windows操作系统](/intl.zh-CN/实例/连接实例/使用第三方客户端工具连接实例/在本地客户端上连接Windows实例.md)。 |
 |Linux|-   VNC
 
-具体操作请参见[通过VNC远程连接Windows实例](/intl.zh-CN/实例/连接实例/连接Windows实例/通过VNC远程连接Windows实例.md)。
+具体操作，请参见[通过密码认证登录Windows实例](/intl.zh-CN/实例/连接实例/使用VNC连接实例/通过密码认证登录Windows实例.md)。
 
 -   rdesktop等客户端工具
 
-具体操作请参见[本地设备使用Linux操作系统](/intl.zh-CN/实例/连接实例/连接Windows实例/在本地客户端上连接Windows实例.md)。 |
+具体操作，请参见[本地设备使用Linux操作系统](/intl.zh-CN/实例/连接实例/使用第三方客户端工具连接实例/在本地客户端上连接Windows实例.md)。 |
 |MacOS|-   VNC
 
-具体操作请参见[通过VNC远程连接Windows实例](/intl.zh-CN/实例/连接实例/连接Windows实例/通过VNC远程连接Windows实例.md)。
+具体操作，请参见[通过密码认证登录Windows实例](/intl.zh-CN/实例/连接实例/使用VNC连接实例/通过密码认证登录Windows实例.md)。
 
 -   Microsoft Remote Desktop Connection for Mac等客户端工具
 
-具体操作请参见[微软官网文档](https://docs.microsoft.com/zh-cn/windows-server/remote/remote-desktop-services/clients/remote-desktop-mac)。 |
-|iOS、Android等移动设备操作系统|Microsoft Remote Desktop等App 具体操作请参见[在移动设备上连接Windows实例](/intl.zh-CN/实例/连接实例/连接Windows实例/在移动设备上连接Windows实例.md)。 |
+具体操作，请参见[微软官网文档](https://docs.microsoft.com/zh-cn/windows-server/remote/remote-desktop-services/clients/remote-desktop-mac)。 |
+|iOS、Android等移动设备操作系统|Microsoft Remote Desktop等App 具体操作，请参见[在移动设备上连接Windows实例](/intl.zh-CN/实例/连接实例/使用第三方客户端工具连接实例/在移动设备上连接Windows实例.md)。 |
 
 **说明：**
 
