--- a/cn.zh-CN/实例/选择实例规格/通用型.md
+++ b/cn.zh-CN/实例/选择实例规格/通用型.md
@@ -82,6 +82,10 @@ g7的特点如下：
 
 -   依托第三代神龙架构，提供稳定可预期的超高性能。同时通过芯片快速路径加速手段，完成存储、网络性能以及计算稳定性的数量级提升。
 -   支持vTPM特性，依托TPM/TCM芯片，实现从服务器到实例的启动链可信度量，提供超高安全能力。
+-   支持阿里云虚拟化Enclave特性，提供基于虚拟化的机密计算环境。更多信息，请参见[使用Enclave构建机密计算环境](/cn.zh-CN/实例/管理实例内部配置/使用Enclave构建机密计算环境.md)。
+
+    **说明：** 阿里云虚拟化Enclave正在邀测中。您可以前往[产品详情页](https://www.aliyun.com/daily-act/ecs/aliyun-enclave)申请使用。
+
 -   计算：
     -   处理器与内存配比为1:4
     -   处理器：采用第三代Intel® Xeon®可扩展处理器（Ice Lake），基频2.7 GHz，全核睿频3.5 GHz，计算性能稳定
@@ -321,7 +325,6 @@ g6t的特点如下：
 
 -   依托TPM/TCM芯片，从底层服务器硬件到GuestOS的启动链均进行度量和验证，实现可信启动。
 -   支持vTPM，通过完整性监控，提供整套IaaS层可信能力。
--   支持Enclave功能，在ECS实例内部提供一个可信的隔离空间，将合法软件的安全操作封装在一个Enclave中，保障您的代码和数据的机密性与完整性，不受恶意软件的攻击。
 -   依托第三代神龙架构，将大量虚拟化功能卸载到专用硬件，降低虚拟化开销，提供稳定可预期的超高性能。同时通过芯片快速路径加速手段，完成存储、网络性能以及计算稳定性的数量级提升。
 -   计算：
     -   处理器与内存配比约为1:4
