--- a/cn.zh-CN/实例/选择实例规格/内存型/内存型.md
+++ b/cn.zh-CN/实例/选择实例规格/内存型/内存型.md
@@ -79,6 +79,10 @@ r7的特点如下：
 
 -   依托第三代神龙架构，提供稳定可预期的超高性能。同时通过芯片快速路径加速手段，完成存储、网络性能以及计算稳定性的数量级提升。
 -   支持vTPM特性，依托TPM/TCM芯片，实现从服务器到实例的启动链可信度量，提供超高安全能力。
+-   支持阿里云虚拟化Enclave特性，提供基于虚拟化的机密计算环境。更多信息，请参见[使用Enclave构建机密计算环境](/cn.zh-CN/实例/管理实例内部配置/使用Enclave构建机密计算环境.md)。
+
+    **说明：** 阿里云虚拟化Enclave正在邀测中。您可以前往[产品详情页](https://www.aliyun.com/daily-act/ecs/aliyun-enclave)申请使用。
+
 -   计算：
     -   处理器与内存配比为1:8
     -   处理器：采用第三代Intel® Xeon®可扩展处理器（Ice Lake），基频2.7 GHz，全核睿频3.5 GHz，计算性能稳定
