--- a/intl.zh-CN/实例/实例规格族.md
+++ b/intl.zh-CN/实例/实例规格族.md
@@ -311,7 +311,7 @@ g7t包括的实例规格及指标数据如下表所示。
 
 ## 网络增强型实例规格族g7ne
 
-本实例规格族正在邀测中，如需使用，请[提交工单](https://workorder-intl.console.aliyun.com/console.htm)。
+该实例规格族正在公测中。
 
 g7ne的特点如下：
 
