--- a/cn.zh-CN/实例/选择实例购买方式/包年包月.md
+++ b/cn.zh-CN/实例/选择实例购买方式/包年包月.md
@@ -16,9 +16,9 @@ keyword: [预付费, ECS到期, 数据保留, 包年包月, 退款, 按周付费
 
 创建包年包月实例后，您可以升降配包年包月实例或扩容包年包月云盘，更多信息请参见[升降配方式概述](/cn.zh-CN/实例/升降配实例/升降配方式概述.md)和[扩容概述](/cn.zh-CN/块存储/扩容云盘/扩容概述.md)。
 
-如果您需要在当前计费周期的到期日后继续使用包年包月资源，可以续费包年包月实例。更多信息，请参见[续费概述](/cn.zh-CN/产品定价/续费实例/续费概述.md)。
+如果您需要在当前计费周期的到期日后继续使用包年包月资源，可以续费包年包月实例。更多信息，请参见[续费概述](/cn.zh-CN/产品计费/续费实例/续费概述.md)。
 
-如果您持有多台包年包月实例，可以使用统一到期日功能将实例的到期日对齐到各月份的同一天，方便统一管理续费时间，具体操作请参见[统一实例到期日](/cn.zh-CN/产品定价/续费实例/统一实例到期日.md)。
+如果您持有多台包年包月实例，可以使用统一到期日功能将实例的到期日对齐到各月份的同一天，方便统一管理续费时间，具体操作请参见[统一实例到期日](/cn.zh-CN/产品计费/续费实例/统一实例到期日.md)。
 
 ## 适用资源
 
@@ -29,7 +29,7 @@ keyword: [预付费, ECS到期, 数据保留, 包年包月, 退款, 按周付费
 |计算资源（vCPU和内存）|创建实例时，您需要确定ECS资源是否采用包年包月计费方式。|
 |镜像|随包年包月实例创建的镜像的计费方式即确定为包年包月。|
 |云盘|随包年包月实例创建的云盘的计费方式即确定为包年包月。 实例创建完成后，您可以为实例创建包年包月云盘和挂载单独创建的按量付费云盘，具体操作请参见[创建包年包月云盘]()和[挂载数据盘](/cn.zh-CN/块存储/云盘基础操作/挂载数据盘.md)。 |
-|公网带宽（按固定带宽）|包年包月实例搭配按固定带宽计费的公网带宽时，带宽的付费模式同为包年包月。更多详情，请参见[公网带宽计费](/cn.zh-CN/产品定价/计费项/公网带宽计费.md)。|
+|公网带宽（按固定带宽）|包年包月实例搭配按固定带宽计费的公网带宽时，带宽的付费模式同为包年包月。更多详情，请参见[公网带宽计费](/cn.zh-CN/产品计费/计费项/公网带宽计费.md)。|
 
 您可以在创建实例页面底部查看所需费用，费用示例如下。
 
@@ -40,7 +40,7 @@ keyword: [预付费, ECS到期, 数据保留, 包年包月, 退款, 按周付费
     -   云盘
     -   公网带宽（按固定带宽）
 
-        **说明：** 如果公网带宽计费方式为按使用流量，则不包含此项，更多信息请参见[公网带宽计费](/cn.zh-CN/产品定价/计费项/公网带宽计费.md)。
+        **说明：** 如果公网带宽计费方式为按使用流量，则不包含此项，更多信息请参见[公网带宽计费](/cn.zh-CN/产品计费/计费项/公网带宽计费.md)。
 
 -   **镜像费用**表示您使用了付费镜像，费用单独列出。
 
