--- a/cn.zh-CN/实例/选择实例购买方式/按量付费.md
+++ b/cn.zh-CN/实例/选择实例购买方式/按量付费.md
@@ -161,7 +161,7 @@ keyword: [按量付费, 计费资源, 计费时长, 结算, 欠费]
 
 **说明：** 重开机和重启是两个不同的概念。
 
--   重开机指将因账户欠费处于已过期或欠费回收中状态的按量付费实例恢复到正常使用状态，具体操作请参见[重开机实例](/cn.zh-CN/实例/管理实例/重开机实例.md)。
+-   重开机指将因账户欠费处于已过期或欠费回收中状态的按量付费实例恢复到正常使用状态，具体操作请参见[重开机实例](/cn.zh-CN/实例/管理实例状态/重开机实例.md)。
 -   重启指重新启动处于运行中状态的实例。
 
 阿里云提供延停权益，即当按量付费的资源发生欠费后，提供一定额度或时长继续使用云服务的权益。延停期间正常计费。延停的权益额度不是欠费总额的上限。您延停的额度或时长根据您在阿里云的历史消费等因素，每个月自动计算并更新。更多信息，请参见[延期免停权益](https://help.aliyun.com/document_detail/190777.html)。
