--- a/intl.zh-CN/实例/选择实例购买方式/按量付费.md
+++ b/intl.zh-CN/实例/选择实例购买方式/按量付费.md
@@ -65,8 +65,8 @@ keyword: [按量付费, 计费资源, 计费时长, 结算, 欠费]
 
 |实例规格单价 \* 计费时长|请参见[云服务器ECS详细价格总览](https://www.alibabacloud.com/product/ecs)下的**实例规格价格**。 **说明：** 本地盘与特定规格的实例相绑定，费用已计入实例规格单价。 |
 |镜像|1秒|镜像单价 \* 计费时长|以售卖页和镜像市场显示的价格为准。|
-|云盘（系统盘）|1秒|云盘单价 \* 云盘容量 \* 计费时长|请参见[云服务器ECS详细价格总览](https://www.alibabacloud.com/product/ecs)下的**存储价格** \> **系统盘****说明：** 页面中标出的按量价格为USD/100GiB/小时\)，将其除以100，即得到每GiB的单价。 |
-|云盘（数据盘）|1秒|云盘单价 \* 云盘容量 \* 计费时长|请参见[云服务器ECS详细价格总览](https://www.alibabacloud.com/product/ecs)下的**存储价格** \> **数据盘**。 **说明：** 页面中标出的按量价格为USD/100GiB/小时\)，将其除以100，即得到每GiB的单价。 |
+|云盘（系统盘）|1秒|云盘单价 \* 云盘容量 \* 计费时长|请参见[云服务器ECS详细价格总览](https://www.alibabacloud.com/product/ecs)下的**存储价格** \> **系统盘****说明：** 页面中标出的按量价格为USD/100GiB/小时，将其除以100，即得到每GiB的单价。 |
+|云盘（数据盘）|1秒|云盘单价 \* 云盘容量 \* 计费时长|请参见[云服务器ECS详细价格总览](https://www.alibabacloud.com/product/ecs)下的**存储价格** \> **数据盘**。 **说明：** 页面中标出的按量价格为USD/100GiB/小时，将其除以100，即得到每GiB的单价。 |
 |公网带宽（按固定带宽）|1秒|固定带宽单价 \* 固定带宽大小 \* 计费时长 更多公网带宽计费说明，请参见[公网带宽计费](/intl.zh-CN/产品计费/计费项/公网带宽计费.md)。
 
 |固定带宽阶梯计费，请在售卖页选择带宽值后查看配置费用的变化。|
