--- a/intl.zh-CN/块存储/性能/测试块存储性能.md
+++ b/intl.zh-CN/块存储/性能/测试块存储性能.md
@@ -12,7 +12,10 @@ keyword: [云盘性能, 块存储性能, ESSD性能, 性能指标, IOPS, 容量,
 
 不同工具测试的硬盘基准性能会有差异，如dd、sysbench、iometer等工具可能会受到测试参数配置和文件系统影响，难以反映真实性能。本示例的性能参数，均为Linux系统下采用FIO工具的测试结果，以此作为块存储产品性能指标参考。Linux实例和Windows实例都推荐使用FIO工具测试块存储性能。
 
-**警告：** 测试裸盘可以获得真实的块存储盘性能，但直接测试裸盘会破坏文件系统结构，请在测试前提前做好数据备份。具体操作，请参见[创建一个云盘快照](/intl.zh-CN/快照/使用快照/创建一个云盘快照.md)。建议您只在新购无数据的ECS实例上使用工具测试块存储性能，避免造成数据丢失。
+**警告：**
+
+-   测试裸盘可以获得真实的块存储盘性能，但会破坏文件系统结构，请在测试前提前创建快照做好数据备份。具体操作，请参见[创建一个云盘快照](/intl.zh-CN/快照/使用快照/创建一个云盘快照.md)。
+-   强烈建议您不要将操作系统所在的云盘或者含有重要数据的云盘作为测试对象。建议您只在新购买的无数据的ECS实例上使用工具测试块存储性能，避免造成数据丢失。
 
 ## 操作步骤
 
@@ -47,6 +50,8 @@ keyword: [云盘性能, 块存储性能, ESSD性能, 性能指标, IOPS, 容量,
 
 5.  运行性能测试命令，具体的命令请参见下文。
 
+    -   关于云盘的测试命令，请参见[云盘性能测试命令](#section_oo3_jrt_x39)。
+    -   关于本地盘的测试命令，请参见[本地盘性能测试命令](#section_f8v_673_2po)。
 
 ## 云盘性能测试命令
 
@@ -93,52 +98,54 @@ keyword: [云盘性能, 块存储性能, ESSD性能, 性能指标, IOPS, 容量,
 
 以下测试命令适用于NVMe SSD本地盘和SATA HDD本地盘。
 
+**说明：** 本示例中，使用的设备名为/dev/your\_device，请您根据实际情况替换。例如需要测试的本地盘为/dev/vdb，则将以下示例命令中的/dev/your\_device替换为/dev/vdb。
+
 -   随机写IOPS：
 
     ```
-    fio -direct=1 -iodepth=32 -rw=randwrite -ioengine=libaio -bs=4k -numjobs=4 -time_based=1 -runtime=1000 -group_reporting -filename=/dev/vdx -name=test
+    fio -direct=1 -iodepth=32 -rw=randwrite -ioengine=libaio -bs=4k -numjobs=4 -time_based=1 -runtime=1000 -group_reporting -filename=/dev/your_device -name=test
     ```
 
 -   随机读IOPS：
 
     ```
-    fio -direct=1 -iodepth=32 -rw=randread -ioengine=libaio -bs=4k -numjobs=4 -time_based=1 -runtime=1000 -group_reporting -filename=/dev/vdx -name=test
+    fio -direct=1 -iodepth=32 -rw=randread -ioengine=libaio -bs=4k -numjobs=4 -time_based=1 -runtime=1000 -group_reporting -filename=/dev/your_device -name=test
     ```
 
 -   顺序写吞吐量（写带宽）：
 
     ```
-    fio -direct=1 -iodepth=128 -rw=write -ioengine=libaio -bs=128k -numjobs=1 -time_based=1 -runtime=1000 -group_reporting -filename=/dev/vdx -name=test
+    fio -direct=1 -iodepth=128 -rw=write -ioengine=libaio -bs=128k -numjobs=1 -time_based=1 -runtime=1000 -group_reporting -filename=/dev/your_device -name=test
     ```
 
 -   顺序读吞吐量（读带宽）：
 
     ```
-    fio -direct=1 -iodepth=128 -rw=read -ioengine=libaio -bs=128k -numjobs=1 -time_based=1 -runtime=1000 -group_reporting -filename=/dev/vdx -name=test
+    fio -direct=1 -iodepth=128 -rw=read -ioengine=libaio -bs=128k -numjobs=1 -time_based=1 -runtime=1000 -group_reporting -filename=/dev/your_device -name=test
     ```
 
 -   随机写延迟：
 
     ```
-    fio -direct=1 -iodepth=1 -rw=randwrite -ioengine=libaio -bs=4k -numjobs=1 -time_based=1 -runtime=1000 -group_reporting -filename=/dev/vdx -name=test
+    fio -direct=1 -iodepth=1 -rw=randwrite -ioengine=libaio -bs=4k -numjobs=1 -time_based=1 -runtime=1000 -group_reporting -filename=/dev/your_device -name=test
     ```
 
 -   随机读延迟：
 
     ```
-    fio -direct=1 -iodepth=1 -rw=randread -ioengine=libaio -bs=4k -numjobs=1 -time_based=1 -runtime=1000 -group_reporting -filename=/dev/vdx -name=test
+    fio -direct=1 -iodepth=1 -rw=randread -ioengine=libaio -bs=4k -numjobs=1 -time_based=1 -runtime=1000 -group_reporting -filename=/dev/your_device -name=test
     ```
 
 -   顺序写延迟：
 
     ```
-    fio -direct=1 -iodepth=1 -rw=write -ioengine=libaio -bs=4k -numjobs=1 -time_based=1 -runtime=1000 -group_reporting -filename=/dev/vdx -name=test
+    fio -direct=1 -iodepth=1 -rw=write -ioengine=libaio -bs=4k -numjobs=1 -time_based=1 -runtime=1000 -group_reporting -filename=/dev/your_device -name=test
     ```
 
 -   顺序读延迟：
 
     ```
-    fio -direct=1 -iodepth=1 -rw=read -ioengine=libaio -bs=4k -numjobs=1 -time_based=1 -runtime=1000 -group_reporting -filename=/dev/vdx -name=test
+    fio -direct=1 -iodepth=1 -rw=read -ioengine=libaio -bs=4k -numjobs=1 -time_based=1 -runtime=1000 -group_reporting -filename=/dev/your_device -name=test
     ```
 
 
@@ -161,9 +168,9 @@ keyword: [云盘性能, 块存储性能, ESSD性能, 性能指标, IOPS, 容量,
 -   异步
 
 异步的I/O通常使用libaio这样的方式一次提交一批I/O请求，然后等待一批的完成，减少交互的次数，会更有效率。 |
-|-bs=4k|表示单次I/O的块文件大小为4KiB。默认值也是4KiB。 -   测试IOPS时，建议将bs设置为一个较小的值，如4k。
+|-bs=4k|表示单次I/O的块文件大小为4 KiB。默认值也是4 KiB。 -   测试IOPS时，建议将bs设置为一个较小的值，如4k。
 -   测试吞吐量时，建议将bs设置为一个较大的值，如1024k。 |
-|-size=1G|表示测试文件大小为1GiB。|
+|-size=1G|表示测试文件大小为1 GiB。|
 |-numjobs=1|表示测试线程数为1。|
 |-runtime=1000|表示测试时间为1000秒。如果未配置，则持续将前述-size指定大小的文件，以每次-bs值为分块大小写完。|
 |-group\_reporting|表示测试结果里汇总每个进程的统计信息，而非以不同job汇总展示信息。|
