--- a/cn.zh-CN/实例/选择实例规格/通用型.md
+++ b/cn.zh-CN/实例/选择实例规格/通用型.md
@@ -11,6 +11,7 @@ keyword: [阿里云, ecs, 服务器, 弹性计算]
     -   [通用型实例规格族g7](#g7)
     -   [安全增强通用型实例规格族g7t](#section_bew_6jv_c0k)
     -   [网络增强型实例规格族g7ne](#section_srt_k9b_at3)
+    -   [通用型实例规格族g6r](#g6r)
     -   [存储增强型实例规格族g6se](#section_aky_rag_mve)
     -   [通用型实例规格族g6a](#section_jtr_8p8_3y8)
     -   [安全增强通用型实例规格族g6t](#section_2dm_67f_8cm)
@@ -74,7 +75,7 @@ g7a包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 通用型实例规格族g7
 
@@ -128,7 +129,7 @@ g7包括的实例规格及指标数据如下表所示。
 
 -   建议您使用Workbench登录Windows实例。如果使用VNC登录Windows实例，可能会出现两个光标，您可以参见[为什么使用VNC登录Windows实例后出现两个光标](/cn.zh-CN/实例/实例FAQ.md)修改鼠标设置来解决此问题。
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 安全增强通用型实例规格族g7t
 
@@ -184,7 +185,7 @@ g7t包括的实例规格及指标数据如下表所示。
 -   实例变配规格、停机不收费等操作均可能造成实例所在的宿主机发生变化，请注意本规格族实例的宿主机变化带来的无法解密数据风险。
 -   实例默认未开启宕机自动迁移，您可以自行修改。具体操作，请参见[修改实例维护属性](/cn.zh-CN/实例/管理实例属性/修改实例维护属性.md)。宕机自动迁移会造成实例所在的宿主机发生变化，请注意本规格族实例的宿主机变化带来的无法解密数据风险。
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 网络增强型实例规格族g7ne
 
@@ -224,7 +225,47 @@ g7ne包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
+
+## 通用型实例规格族g6r
+
+g6r的特点如下：
+
+-   依托第三代神龙架构，提供稳定可预期的超高性能。同时通过芯片快速路径加速手段，完成存储、网络性能以及计算稳定性的数量级提升。
+-   计算：
+    -   处理器与内存配比为1:4
+    -   处理器：2.8 GHz主频的Ampere® Altra®处理器，计算性能稳定
+-   存储：
+    -   I/O优化实例
+    -   支持ESSD云盘、SSD云盘和高效云盘
+    -   实例存储I/O性能与计算规格对应（规格越高存储I/O性能越强）
+-   网络：
+    -   支持IPv6
+    -   超高网络PPS收发包能力
+    -   小规格实例网络带宽具备突发能力
+    -   实例网络性能与计算规格对应（规格越高网络性能越强）
+-   适用场景：
+    -   容器、微服务
+    -   测试开发，例如DevOps
+    -   网站和应用服务器
+    -   游戏服务器
+    -   基于CPU的机器学习推理
+
+g6r包括的实例规格及指标数据如下表所示。
+
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|-----------------|:-------|---|---|:---|------|------------|
+|ecs.g6r.large|2|8|1.2/10|90万|最高25万|2|3|2万|1|
+|ecs.g6r.xlarge|4|16|2/10|100万|最高25万|4|4|4万|1.5|
+|ecs.g6r.2xlarge|8|32|3/10|160万|最高25万|8|4|5万|2|
+|ecs.g6r.4xlarge|16|64|6/10|300万|30万|8|8|8万|3|
+|ecs.g6r.8xlarge|32|128|10/无|600万|60万|16|8|15万|5|
+|ecs.g6r.16xlarge|64|256|16/无|1200万|90万|32|8|25万|8|
+
+**说明：**
+
+-   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 存储增强型实例规格族g6se
 
@@ -267,7 +308,7 @@ g6se包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 通用型实例规格族g6a
 
@@ -317,7 +358,7 @@ g6a包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 安全增强通用型实例规格族g6t
 
@@ -369,7 +410,7 @@ g6t包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 -   网络能力为单项测试最高能力。例如，单项测试网络带宽能力时，不会对网络收发包能力和其他指标同时做压力测试。
 
 ## 通用平衡增强型实例规格族g6e
@@ -422,7 +463,7 @@ g6e包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 -   网络能力为单项测试最高能力。例如，单项测试网络带宽能力时，不会对网络收发包能力和其他指标同时做压力测试。
 
 ## 通用型实例规格族g6
@@ -481,7 +522,7 @@ g6包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 通用型实例规格族g5
 
@@ -526,7 +567,7 @@ g5包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 网络增强型实例规格族g5ne
 
@@ -567,7 +608,7 @@ g5ne包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 通用网络增强型实例规格族sn2ne
 
@@ -606,7 +647,7 @@ sn2ne包括的实例规格及指标数据如下表所示。
 **说明：**
 
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
--   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.mdsection_e9r_xkf_z15)。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
 ## 相关链接
 
