--- a/cn.zh-CN/动态与公告/新功能发布记录.md
+++ b/cn.zh-CN/动态与公告/新功能发布记录.md
@@ -11,6 +11,8 @@
 
 |功能名称|功能描述|发布时间|发布地域|相关文档|
 |----|:---|:---|----|:---|
+|实例规格族|发布通用型实例规格族g6r、计算型实例规格族c6r。|2021-07-10|部分|[实例规格族](/cn.zh-CN/实例/实例规格族.md)|
+|前缀列表|发布前缀列表功能，便于管理维护CIDR地址块。|2021-07-02|部分|[前缀列表概述](/cn.zh-CN/网络/前缀列表/前缀列表概述.md)|
 |实例规格族|发布GPU计算型实例规格族gn7i。|2021-07-01|全部|[实例规格族](/cn.zh-CN/实例/实例规格族.md)|
 
 ## 2021年06月
@@ -37,7 +39,7 @@
 -   操作系统内相关配置诊断支持更多诊断项。
 
 |2021-04-15|全部|[诊断实例的健康状态](/cn.zh-CN/运维与监控/实例健康诊断/诊断实例的健康状态.md)|
-|实例休眠|发布实例休眠功能，休眠实例后再次启动实例，ECS实例会自动恢复至休眠前的应用程序状态。|2021-04-06|部分|[休眠实例](/cn.zh-CN/实例/管理实例/休眠实例.md)|
+|实例休眠|发布实例休眠功能，休眠实例后再次启动实例，ECS实例会自动恢复至休眠前的应用程序状态。|2021-04-06|部分|[休眠实例](/cn.zh-CN/实例/管理实例状态/休眠实例.md)|
 |快照|发布实例快照功能，您可以为一台ECS实例中的多个云盘同时创建快照，保证数据写入时序上的一致性。|2021-04-06|部分|[创建多个云盘快照（实例快照）](/cn.zh-CN/快照/使用实例快照/创建多个云盘快照（实例快照）.md)|
 |快照|发布应用一致性快照功能，您使用应用一致性快照进行回滚时，可确保应用处于一致性的启动状态。|2021-04-06|部分|[开启应用一致性快照功能](/cn.zh-CN/快照/使用实例快照/开启应用一致性快照功能.md)|
 
@@ -174,10 +176,10 @@
 
 |功能名称|功能描述|发布时间|发布地域|相关文档|
 |----|:---|:---|----|:---|
-|标签|丰富标签功能，支持通过标签对RAM用户进行权限控制，支持通过OOS批量绑定和修改标签。|2020-01-03|全部|-   [使用标签控制资源的访问](/cn.zh-CN/标签与资源/标签/使用标签控制资源的访问.md)
--   [创建带特定标签的资源](/cn.zh-CN/标签与资源/标签/创建带特定标签的资源.md)
--   [使用OOS批量绑定标签](/cn.zh-CN/标签与资源/标签/使用OOS批量绑定标签.md)
--   [使用OOS批量修改标签值](/cn.zh-CN/标签与资源/标签/使用OOS批量修改标签值.md) |
+|标签|丰富标签功能，支持通过标签对RAM用户进行权限控制，支持通过OOS批量绑定和修改标签。|2020-01-03|全部|-   [使用标签控制资源的访问](/cn.zh-CN/标签与资源/标签/基于标签管理资源/使用标签控制资源的访问.md)
+-   [创建带特定标签的资源](/cn.zh-CN/标签与资源/标签/基于标签管理资源/创建带特定标签的资源.md)
+-   [使用OOS批量绑定标签](/cn.zh-CN/标签与资源/标签/管理标签/使用OOS批量绑定标签.md)
+-   [使用OOS批量修改标签值](/cn.zh-CN/标签与资源/标签/管理标签/使用OOS批量修改标签值.md) |
 |实例规格族|发布大数据存储密集型实例规格族d2s。|2020-01-17|部分|[实例规格族](/cn.zh-CN/实例/实例规格族.md)|
 |实例规格族|发布轻量级GPU计算型实例规格族vgn6i。|2020-01-16|部分|[实例规格族](/cn.zh-CN/实例/实例规格族.md)|
 |实例规格族|发布共享标准型实例规格族s6。|2020-01-16|部分|[实例规格族](/cn.zh-CN/实例/实例规格族.md)|
@@ -196,7 +198,7 @@
 
 |功能名称|功能描述|发布时间|发布地域|相关文档|
 |----|:---|:---|----|:---|
-|标签|标签编辑器功能上线，支持跨产品和跨地域查询5000条资源信息，能够编辑资源的标签以及导出资源信息。|2019-11-28|全部|[使用标签编辑器管理资源标签](/cn.zh-CN/标签与资源/标签/使用标签编辑器管理资源标签.md)|
+|标签|标签编辑器功能上线，支持跨产品和跨地域查询5000条资源信息，能够编辑资源的标签以及导出资源信息。|2019-11-28|全部|[使用标签编辑器管理资源标签](/cn.zh-CN/标签与资源/标签/基于标签管理资源/使用标签编辑器管理资源标签.md)|
 |企业安全组|企业安全组能容纳的私网IP数量提升至65536。|2019-11-22|全部|[企业安全组](/cn.zh-CN/安全/安全组/企业安全组.md)|
 |快照|自动快照的额度提升至1000份。|2019-11-15|全部|[快照概述](/cn.zh-CN/快照/快照概述.md)|
 |实例规格族|发布GPU计算型实例规格族gn6e。|2019-11-14|部分|[实例规格族](/cn.zh-CN/实例/实例规格族.md)|
@@ -300,7 +302,7 @@
 |----|:---|:---|----|:---|
 |云助手|云助手支持英国（伦敦）地域。|2018-12-31|全部|[云助手概述](/cn.zh-CN/运维与监控/云助手/云助手概述.md)|
 |抢占式实例|抢占式实例按秒计费。|2018-12-17|全部|[抢占式实例](/cn.zh-CN/实例/选择实例购买方式/抢占式实例/抢占式实例概述.md)|
-|实例|支持实例释放保护功能。|2018-12-14|全部|[实例释放保护](/cn.zh-CN/实例/管理实例/开启和关闭实例释放保护.md)|
+|实例|支持实例释放保护功能。|2018-12-14|全部|[实例释放保护](/cn.zh-CN/实例/管理实例属性/开启和关闭实例释放保护.md)|
 |IPv6|ECS支持IPv6。|2018-12-06|部分|[IPv6地址](/cn.zh-CN/网络/实例IP地址介绍/IPv6地址.md)|
 |弹性网卡|DescribeNetworkInterfaces支持输出网卡绑定的公网IP。|2018-12-04|全部|[DescribeNetworkInterfaces](/cn.zh-CN/API参考/弹性网卡/DescribeNetworkInterfaces.md)|
 
@@ -311,7 +313,7 @@
 |自定义镜像|支持使用Packer快速创建自定义镜像。|2018-11-30|全部|[使用Packer创建自定义镜像](/cn.zh-CN/镜像/自定义镜像/创建自定义镜像/使用Packer创建自定义镜像.md)|
 |实例规格族|发布re4e内存增强型实例。|2018-11-30|全部|[实例规格族](/cn.zh-CN/实例/实例规格族.md)|
 |块存储|支持单独创建包年包月云盘，并挂载到包年包月实例。|2018-11-29|全部|[创建包年包月云盘]()|
-|全局标签|支持全局标签功能，ECS控制台云资源实现分组管理。|2018-11-23|全部|[全局标签](/cn.zh-CN/标签与资源/标签/全局标签实践.md)|
+|全局标签|支持全局标签功能，ECS控制台云资源实现分组管理。|2018-11-23|全部|[全局标签](/cn.zh-CN/标签与资源/标签/基于标签管理资源/全局标签实践.md)|
 |部署集|阿里云部署集（Deployment Set）上线。|2018-11-16|全部|[部署集概述](/cn.zh-CN/部署与弹性/部署集/部署集概述.md)|
 
 ## 2018年10月
@@ -326,7 +328,7 @@
 |功能名称|功能描述|发布时间|发布地域|相关文档|
 |----|:---|:---|----|:---|
 |突发性能实例（t5）|突发性能实例支持无性能约束模式。|2018-09-30|全部|[无性能约束模式](/cn.zh-CN/实例/选择实例规格/突发型/突发性能实例概述.mdsection_i6c_2kn_y5s)|
-|实例元数据Metadata|实例元数据metadata支持实例运维相关系统事件信息。|2018-09-14|全部|[实例元数据](/cn.zh-CN/实例/管理实例/使用实例元数据/ECS实例元数据概述.md)|
+|实例元数据Metadata|实例元数据metadata支持实例运维相关系统事件信息。|2018-09-14|全部|[实例元数据](/cn.zh-CN/实例/管理实例内部配置/使用实例元数据/ECS实例元数据概述.md)|
 |实例健康状态|ECS实例详情页面提供实例健康状态。|2018-09-14|全部|[查看实例健康状况](/cn.zh-CN/运维与监控/监控实例状态/查看实例健康状况.md)|
 |实例规格族|最新一代GPU云主机gn6v（V100机型）正式售卖。|2018-09-12|全部|[实例规格族](/cn.zh-CN/实例/实例规格族.md)|
 |实例购买|支持批量续费实例以及购买历史实例。|2018-09-07|全部|[手动续费实例](/cn.zh-CN/产品计费/续费实例/手动续费实例.md)|
@@ -349,7 +351,7 @@
 |自定义镜像|支持导入qcow2格式的镜像。|2018-07-30|全部|-   [导入自定义镜像](/cn.zh-CN/镜像/自定义镜像/导入镜像/导入自定义镜像.md)
 -   [ImportImage](/cn.zh-CN/API参考/镜像/ImportImage.md) |
 |安全组|支持修改安全组规则。|2018-07-25|全部|[修改安全组规则](/cn.zh-CN/安全/安全组/管理安全组规则/查询安全组规则.md)|
-|标签|创建资源时支持绑定标签。|2018-07-20|全部|[绑定标签](/cn.zh-CN/标签与资源/标签/创建或绑定标签.md)|
+|标签|创建资源时支持绑定标签。|2018-07-20|全部|[绑定标签](/cn.zh-CN/标签与资源/标签/管理标签/创建或绑定标签.md)|
 |实例规格族|发布计算型弹性裸金属服务器实例规格族ebmc4。|2018-07-18|全部|[实例规格族](/cn.zh-CN/实例/实例规格族.md)|
 |快照|显示快照创建剩余时长。|2018-07-17|全部|[创建一个云盘快照](/cn.zh-CN/快照/使用快照/创建一个云盘快照.md)|
 |账号与用户特权|管理配额。|2018-07-15|全部|[查看配额（旧版）]()|
@@ -392,7 +394,7 @@
 |GPU实例|支持NGC GPU加速容器。|2018-03-28|全部|[在gn5实例上部署NGC环境](/cn.zh-CN/最佳实践/GPU实例最佳实践/在GPU实例上部署NGC环境.md)|
 |系统事件|发布系统事件功能。|2018-03-26|全部|[系统事件概述](/cn.zh-CN/运维与监控/系统事件/系统事件概述.md)|
 |弹性裸金属服务器|发布弹性裸金属服务器。|2018-03-14|全部|[弹性裸金属服务器概述](/cn.zh-CN/实例/选择实例规格/弹性裸金属服务器/弹性裸金属服务器概述.md)|
-|实例标识|发布实例标识功能。|2018-03-01|全部|[使用实例标识](/cn.zh-CN/实例/管理实例/使用实例元数据/使用实例标识.md)|
+|实例标识|发布实例标识功能。|2018-03-01|全部|[使用实例标识](/cn.zh-CN/实例/管理实例内部配置/使用实例元数据/使用实例标识.md)|
 
 ## 2018年2月
 
