--- a/cn.zh-CN/实例/实例规格族.md
+++ b/cn.zh-CN/实例/实例规格族.md
@@ -25,6 +25,7 @@ keyword: [ECS实例规格族, 实例规格族]
 -   [通用型实例规格族g7](#g7)
 -   [安全增强通用型实例规格族g7t](#g7t)
 -   [网络增强型实例规格族g7ne](#g7ne)
+-   [通用型实例规格族g6r](#g6r)
 -   [通用型实例规格族g6](#g6)
 -   [存储增强型实例规格族g6se](#g6se)
 -   [通用型实例规格族g6a](#g6a)
@@ -36,6 +37,7 @@ keyword: [ECS实例规格族, 实例规格族]
 -   [计算型实例规格族c7a](#c7a)
 -   [计算型实例规格族c7](#c7)
 -   [安全增强计算型实例规格族c7t](#c7t)
+-   [计算型实例规格族c6r](#c6r)
 -   [计算型实例规格族c6](#c6)
 -   [计算型实例规格族c6a](#c6a)
 -   [安全增强计算型实例规格族c6t](#c6t)
@@ -348,6 +350,46 @@ g7ne包括的实例规格及指标数据如下表所示。
 |ecs.g7ne.12xlarge|48|192|40/无|1200万|800万|32|8|30|10万|8|
 |ecs.g7ne.16xlarge|64|256|50/无|1600万|1400万|32|8|30|15万|8|
 |ecs.g7ne.24xlarge|96|384|80/无|2400万|1600万|32|15|50|24万|16|
+
+**说明：**
+
+-   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
+
+## 通用型实例规格族g6r
+
+g6r的特点如下：
+
+-   依托第三代神龙架构，提供稳定可预期的超高性能。同时通过芯片快速路径加速手段，完成存储、网络性能以及计算稳定性的数量级提升。
+-   计算：
+    -   处理器与内存配比为1:4
+    -   处理器：2.8 GHz主频的Ampere® Altra®处理器，计算性能稳定
+-   存储：
+    -   I/O优化实例
+    -   支持ESSD云盘、SSD云盘和高效云盘
+    -   实例存储I/O性能与计算规格对应（规格越高存储I/O性能越强）
+-   网络：
+    -   支持IPv6
+    -   超高网络PPS收发包能力
+    -   小规格实例网络带宽具备突发能力
+    -   实例网络性能与计算规格对应（规格越高网络性能越强）
+-   适用场景：
+    -   容器、微服务
+    -   测试开发，例如DevOps
+    -   网站和应用服务器
+    -   游戏服务器
+    -   基于CPU的机器学习推理
+
+g6r包括的实例规格及指标数据如下表所示。
+
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|-----------------|:-------|---|---|:---|------|------------|
+|ecs.g6r.large|2|8|1.2/10|90万|最高25万|2|3|2万|1|
+|ecs.g6r.xlarge|4|16|2/10|100万|最高25万|4|4|4万|1.5|
+|ecs.g6r.2xlarge|8|32|3/10|160万|最高25万|8|4|5万|2|
+|ecs.g6r.4xlarge|16|64|6/10|300万|30万|8|8|8万|3|
+|ecs.g6r.8xlarge|32|128|10/无|600万|60万|16|8|15万|5|
+|ecs.g6r.16xlarge|64|256|16/无|1200万|90万|32|8|25万|8|
 
 **说明：**
 
@@ -901,6 +943,46 @@ c7t包括的实例规格及指标数据如下表所示。
 -   Intel SGX特性与宿主机的硬件绑定，本实例规格族不支持热迁移。
 -   实例变配规格、停机不收费等操作均可能造成实例所在的宿主机发生变化，请注意本规格族实例的宿主机变化带来的无法解密数据风险。
 -   实例默认未开启宕机自动迁移，您可以自行修改。具体操作，请参见[修改实例维护属性](/cn.zh-CN/实例/管理实例属性/修改实例维护属性.md)。宕机自动迁移会造成实例所在的宿主机发生变化，请注意本规格族实例的宿主机变化带来的无法解密数据风险。
+-   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
+-   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
+
+## 计算型实例规格族c6r
+
+c6r的特点如下：
+
+-   依托第三代神龙架构，提供稳定可预期的超高性能。同时通过芯片快速路径加速手段，完成存储、网络性能以及计算稳定性的数量级提升。
+-   计算：
+    -   处理器与内存配比为1:2
+    -   处理器：2.8 GHz主频的Ampere® Altra®处理器，计算性能稳定
+-   存储：
+    -   I/O优化实例
+    -   支持ESSD云盘、SSD云盘和高效云盘
+    -   实例存储I/O性能与计算规格对应（规格越高存储I/O性能越强）
+-   网络：
+    -   支持IPv6
+    -   超高网络PPS收发包能力
+    -   小规格实例网络带宽具备突发能力
+    -   实例网络性能与计算规格对应（规格越高网络性能越强）
+-   适用场景：
+    -   容器、微服务
+    -   测试开发，例如DevOps
+    -   网站和应用服务器
+    -   基于CPU的机器学习推理
+    -   高性能科学和工程应用
+
+c6r包括的实例规格及指标数据如下表所示。
+
+|实例规格|vCPU|内存（GiB）|网络带宽基础/突发（Gbit/s）|网络收发包PPS|连接数|多队列|弹性网卡|云盘IOPS|云盘带宽（Gbit/s）|
+|:---|:---|:------|-----------------|:-------|---|---|:---|------|------------|
+|ecs.c6r.large|2|8|1.2/10|90万|最高25万|2|3|2万|1|
+|ecs.c6r.xlarge|4|16|2/10|100万|最高25万|4|4|4万|1.5|
+|ecs.c6r.2xlarge|8|32|3/10|160万|最高25万|8|4|5万|2|
+|ecs.c6r.4xlarge|16|64|6/10|300万|30万|8|8|8万|3|
+|ecs.c6r.8xlarge|32|128|10/无|600万|60万|16|8|15万|5|
+|ecs.c6r.16xlarge|64|256|16/无|1200万|90万|32|8|25万|8|
+
+**说明：**
+
 -   您可以前往[ECS实例可购买地域](https://ecs-buy.aliyun.com/instanceTypes/#/instanceTypeByRegion)，查看实例在各地域的可购情况。
 -   指标的含义请参见[实例规格指标说明](/cn.zh-CN/实例/实例规格族.md)。
 
