--- a/cn.zh-CN/镜像/公共镜像/公共镜像发布记录.md
+++ b/cn.zh-CN/镜像/公共镜像/公共镜像发布记录.md
@@ -9,7 +9,8 @@ keyword: [release note, 发布更新, ecs, linux, windows]
 ## 背景信息
 
 -   如无特殊声明，更新内容适用于云服务器ECS所有可用地域。
--   公共镜像适用于大多数实例规格族，但存在一部分实例规格族不适用。这些实例规格族只能选用指定的公共镜像，详情请参见：
+-   公共镜像适用于大多数实例规格族，但存在一部分实例规格族不适用。这些实例规格族只能选用指定的公共镜像，更多信息，请参见：
+    -   [ARM镜像](#section_vat_mi8_821)
     -   [UEFI镜像](#section_5m3_jo1_1sl)
     -   [可信镜像](#section_ta4_ich_flj)
     -   [AMD镜像](#section_in3_bba_8af)
@@ -20,19 +21,16 @@ keyword: [release note, 发布更新, ecs, linux, windows]
 |:-|----|----|:---|
 |Anolis OS 8.2 RHCK|anolisos\_8\_2\_x64\_20G\_rhck\_alibase\_20210529.vhd|2021-05-29|-   发布龙蜥（Anolis）OS 8镜像。更多信息，请参见[龙蜥（Anolis）OS](https://openanolis.cn/anolisos)
 -   100%兼容CentOS 8软件生态，且兼容其它主流 Linux发行版
--   提供CentOS到Anolis OS的迁移工具，帮助您将CentOS系统及应用顺滑迁移至Anolis OS
--   适用地域：华东1（杭州）、华北2（北京）、华南2（河源）、西南1（成都）、英国（伦敦）、德国（法兰克福）、新加坡、印度尼西亚（雅加达）、马来西亚（吉隆坡）、澳大利亚（悉尼）、阿联酋（迪拜） |
+-   提供CentOS到Anolis OS的迁移工具，帮助您将CentOS系统及应用顺滑迁移至Anolis OS |
 
 ## CentOS
 
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
 |CentOS 8.4|centos\_8\_4\_x64\_20G\_alibase\_20210623.vhd|2021-06-23|-   内核版本：4.18.0-305.3.1.el8.x86\_64
--   更新内容：更新最新补丁包
--   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
+-   更新内容：更新最新补丁包 |
 |CentOS 7.9|centos\_7\_9\_x64\_20G\_alibase\_20210623.vhd|2021-06-23|-   内核版本：3.10.0-1160.31.1.el7.x86\_64
--   更新内容：更新最新补丁包
--   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
+-   更新内容：更新最新补丁包 |
 |CentOS 8.3|centos\_8\_3\_x64\_20G\_alibase\_20210521.vhd|2021-05-21|-   内核版本：4.18.0-240.22.1.el8\_3.x86\_64
 -   更新内容：更新最新补丁包 |
 |CentOS 7.9|centos\_7\_9\_x64\_20G\_alibase\_20210521.vhd|2021-05-21|-   内核版本：3.10.0-1160.25.1.el7.x86\_64
@@ -161,11 +159,9 @@ keyword: [release note, 发布更新, ecs, linux, windows]
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
 |Debian 10.10|debian\_10\_10\_x64\_20G\_alibase\_20210623.vhd|2021-06-23|-   内核版本：4.19.0-17-amd64
--   更新内容：更新最新补丁包
--   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
+-   更新内容：更新最新补丁包 |
 |Debian 9.13|debian\_9\_13\_x64\_20G\_alibase\_20210623.vhd|2021-06-23|-   内核版本：4.9.0-16-amd64
--   更新内容：更新最新补丁包
--   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
+-   更新内容：更新最新补丁包 |
 |Debian 10.9|debian\_10\_9\_x64\_20G\_alibase\_20210521.vhd|2021-05-21|-   内核版本：4.19.0-16-amd64
 -   更新内容：更新最新补丁包 |
 |Debian 9.13|debian\_9\_13\_x64\_20G\_alibase\_20210521.vhd|2021-05-21|-   内核版本：4.9.0-15-amd64
@@ -288,14 +284,11 @@ keyword: [release note, 发布更新, ecs, linux, windows]
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
 |Ubuntu20.04|ubuntu\_20\_04\_x64\_20G\_alibase\_20210623.vhd|2021-06-23|-   内核版本：5.4.0-77-generic
--   更新内容：更新最新补丁包
--   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
+-   更新内容：更新最新补丁包 |
 |Ubuntu18.04|ubuntu\_18\_04\_x64\_20G\_alibase\_20210623.vhd|2021-06-23|-   内核版本：4.15.0-147-generic
--   更新内容：更新最新补丁包
--   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
+-   更新内容：更新最新补丁包 |
 |Ubuntu16.04|ubuntu\_16\_04\_x64\_20G\_alibase\_20210623.vhd|2021-06-23|-   内核版本：4.4.0-210-generic
--   更新内容：更新最新补丁包
--   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
+-   更新内容：更新最新补丁包 |
 |Ubuntu20.04|ubuntu\_20\_04\_x64\_20G\_alibase\_20210521.vhd|2021-05-21|-   内核版本：5.4.0-74-generic
 -   更新内容：更新最新补丁包 |
 |Ubuntu18.04|ubuntu\_18\_04\_x64\_20G\_alibase\_20210521.vhd|2021-05-21|-   内核版本：4.15.0-144-generic
@@ -430,8 +423,7 @@ keyword: [release note, 发布更新, ecs, linux, windows]
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
 |Opensuse 15.2|opensuse\_15\_2\_x64\_20G\_alibase\_20210623.vhd|2021-06-23|-   内核版本：5.3.18-lp152.78-default
--   更新最新补丁包
--   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
+-   更新最新补丁包 |
 |Opensuse 15.2|opensuse\_15\_2\_x64\_20G\_alibase\_20210521.vhd|2021-05-21|-   内核版本：5.3.18-lp152.75-default
 -   更新最新补丁包 |
 |Opensuse 15.2|opensuse\_15\_2\_x64\_20G\_alibase\_20210420.vhd|2021-04-20|-   内核版本：5.3.18-lp152.69-default
@@ -510,8 +502,7 @@ keyword: [release note, 发布更新, ecs, linux, windows]
 -   更新最新补丁包
 -   使用该镜像时，您需要注意：
     -   创建实例或更换系统盘时，登录凭证仅支持设置密钥对，且仅能使用实例第一次设置的密钥对登录实例，不支持更换或解绑该密钥对。
-    -   创建实例或更换系统盘后，不支持为实例重置密码。
--   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
+    -   创建实例或更换系统盘后，不支持为实例重置密码。 |
 |Fedora CoreOS 33.20210217.3.0\_3|fcos\_33.20210217.3.0\_3\_x86\_20G\_alibase\_20210331.vhd|2021-03-31|-   发布Fedora CoreOS公共镜像
 -   内核版本：5.10.12-200.fc33.x86\_64
 -   使用该镜像时，您需要注意：
@@ -523,8 +514,7 @@ keyword: [release note, 发布更新, ecs, linux, windows]
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
 |Fedora 34 64位|fedora\_34\_1\_x64\_20G\_alibase\_20210623.vhd|2021-06-23|-   内核版本：5.12.12-300.fc34.x86\_64
--   更新最新补丁包
--   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
+-   更新最新补丁包 |
 |Fedora 33 64位|fedora\_33\_0\_x64\_20G\_alibase\_20210318.vhd|2021-03-18|-   内核版本：5.11.7-200.fc33.x86\_64
 -   更新内容：
     -   更新最新补丁包
@@ -535,18 +525,32 @@ keyword: [release note, 发布更新, ecs, linux, windows]
     -   更新最新补丁包
     -   修复CVE-2021-3156漏洞 |
 
+## ARM镜像
+
+ARM镜像仅适用的实例规格族：ecs.g6r、ecs.c6r。
+
+|版本|镜像ID|发布时间|发布内容|
+|:-|----|----|:---|
+|CentOS 8.3|centos\_8\_3\_arm64\_20G\_alibase\_20210707.vhd|2021-07-07|-   发布CentOS 8.3 ARM版镜像
+-   适用地域：华东1（杭州） |
+|CentOS 8.4|centos\_8\_4\_arm64\_20G\_alibase\_20210706.vhd|2021-07-06|-   发布CentOS 8.4 ARM版镜像
+-   适用地域：华东1（杭州） |
+|CentOS 7.9|centos\_7\_9\_arm64\_20G\_alibase\_20210706.vhd|2021-07-06|-   发布CentOS 7.9 ARM版镜像
+-   适用地域：华东1（杭州） |
+|Ubuntu 18.04|ubuntu\_18\_04\_arm64\_20G\_alibase\_20210706.vhd|2021-07-06|-   发布Ubuntu 18.04 ARM版镜像
+-   适用地域：华东1（杭州） |
+|Debian 10.9|debian\_10\_9\_arm64\_20G\_alibase\_20210706.vhd|2021-07-06|-   发布Debian 10.9 ARM版镜像
+-   适用地域：华东1（杭州） |
+
 ## UEFI镜像
 
 UEFI镜像仅适用的实例规格族：ecs.g7、ecs.r7、ecs.c7、ecs.g7t、ecs.r7t、ecs.c7t。
 
 |版本|镜像ID|发布时间|发布内容|
 |:-|----|----|:---|
-|Debian 10.10|debian\_10\_10\_uefi\_x64\_20G\_alibase\_20210611.vhd|2021-06-11|-   发布Debian 10.10 UEFI版镜像
--   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
-|Debian 9.13|debian\_9\_13\_uefi\_x64\_20G\_alibase\_20210611.vhd|2021-06-11|-   发布Debian 9.13 UEFI版镜像
--   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
-|CentOS 7.9|centos\_7\_9\_uefi\_x64\_20G\_alibase\_20210611.vhd|2021-06-11|-   发布CentOS 7.9 UEFI版镜像
--   适用地域：华东1（杭州）、华北1（青岛）、华北2（北京）、华北5（呼和浩特）、西南1（成都）、新加坡、美国（弗吉尼亚） |
+|Debian 10.10|debian\_10\_10\_uefi\_x64\_20G\_alibase\_20210611.vhd|2021-06-11|发布Debian 10.10 UEFI版镜像|
+|Debian 9.13|debian\_9\_13\_uefi\_x64\_20G\_alibase\_20210611.vhd|2021-06-11|发布Debian 9.13 UEFI版镜像|
+|CentOS 7.9|centos\_7\_9\_uefi\_x64\_20G\_alibase\_20210611.vhd|2021-06-11|发布CentOS 7.9 UEFI版镜像|
 |CentOS 8.4|centos\_8\_4\_uefi\_x64\_20G\_alibase\_20210611.vhd|2021-06-11|发布CentOS 8.4 UEFI版镜像|
 |CentOS 8.3|centos\_8\_3\_uefi\_x64\_20G\_alibase\_20210611.vhd|2021-06-11|发布CentOS 8.3 UEFI版镜像|
 |Ubuntu 20.04|ubuntu\_20\_04\_uefi\_x64\_20G\_alibase\_20210609.vhd|2021-06-09|发布Ubuntu 20.04 UEFI版镜像|
