--- a/cn.zh-CN/块存储/云盘基础操作/释放云盘.md
+++ b/cn.zh-CN/块存储/云盘基础操作/释放云盘.md
@@ -74,15 +74,13 @@ keyword: [释放云盘, 删除云盘, deletedisk, 阿里云, ecs]
 
 4.  找到需要操作的实例，单击实例ID进入**实例详情**页。
 
-5.  在**实例详情**页的导航栏，选择**本地实例磁盘**。
+5.  在**实例详情**页单击**云盘**页签。
 
-6.  找到目标云盘，在**操作**栏处，选择**更多** \> **修改属性**。
+6.  找到目标云盘，在**操作**栏处，选择**更多** \> **编辑属性**。
 
-7.  在修改云盘属性弹窗中，选中或取消选中**云盘随实例释放**，单击**确定**。
+7.  在编辑云盘属性弹窗中，选中或取消选中**云盘随实例释放**，单击**确定**。
 
     **说明：** 取消勾选**云盘随实例释放**后，云盘在所属实例到期或者欠费十五天后，或者您主动释放实例时，被自动转化为按量付费数据盘并保留下来。
-
-    ![修改云盘随实例释放](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8363359951/p88414.gif)
 
 
 **相关文档**  
